--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -243,7 +243,7 @@
     </div >
     <div class="row container" >
       <div class="col-4" >
-        <button type="link" class="btn btn-danger btn-block" >Back</button >
+        <a href="/student"><button type="button" class="btn btn-danger btn-block" >Back</button ></a>
       </div >
 
       <div class="col-4" >
