--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -104,8 +104,8 @@
 
         <div class="row container-fluid">
             <div class="col-sm-2 col-sm-offset-2">
-                <a href="/school">
-                    <button type="link"  class="btn btn-danger btn-block" >Back</button>
+                <a href="/student">
+                    <button type="button"  class="btn btn-danger btn-block" >Back</button>
                 </a>
             </div>
 
