--- a/src/main/resources/templates/teacher/teacher-detail.html
+++ b/src/main/resources/templates/teacher/teacher-detail.html
@@ -26,81 +26,89 @@
 </div >
 <!--teacherDetail detail-->
 <div class=" row container-fluid" data-th-fragment="teacherDetail" >
-  <div class="col-sm-8" >
-    <div class="form-group" >
-      <label data-th-for="${id}" class="col-sm-3 control-label" >Index</label >
-      <div class="col-sm-6" >
-        <p type="text" id="id" class="form-control" data-th-text="${teacherDetail.id}" >
+  <div class="row container-fluid">
+    <div class="colspan-4 container" >
+      <div class="form-group" >
+        <label data-th-for="${id}" class="col-sm-3 control-label" >Index</label >
+        <div class="col-sm-6" >
+          <p type="text" id="id" class="form-control" data-th-text="${teacherDetail.id}" >
+        </div >
+      </div >
+      <div class="form-group" >
+        <label data-th-for="${firstName}" class="col-sm-3 control-label" >First name</label >
+        <div class="col-sm-6" >
+          <p type="text" id="firstName" class="form-control" data-th-text="${teacherDetail.firstName}" >
+        </div >
+      </div >
+      <div class="form-group" >
+        <label data-th-for="${nic}" class="col-sm-3 control-label" >NIC</label >
+        <div class="col-sm-6" >
+          <p type="text" id="nic" class="form-control" data-th-text="${teacherDetail.nic}" >
+        </div >
+      </div >
+      <div class="form-group" >
+        <label data-th-for="${gender}" class="col-sm-3 control-label" >Gender</label >
+        <div class="col-sm-6" >
+          <p type="text" id="gender" class="form-control" data-th-text="${teacherDetail.gender}" >
+        </div >
+      </div >
+      <div class="form-group" >
+        <label data-th-for="${email}" class="col-sm-3 control-label" >Email</label >
+        <div class="col-sm-6" >
+          <p type="text" id="email" class="form-control" data-th-text="${teacherDetail.email}" >
+        </div >
+      </div >
+      <div class="form-group" >
+        <label data-th-for="${subject}" class="col-sm-3 control-label" >subject</label >
+        <div class="col-sm-6" >
+          <p type="text" id="subject" class="form-control" data-th-text="${teacherDetail.subject.name}" >
+        </div >
       </div >
     </div >
-    <div class="form-group" >
-      <label data-th-for="${RegistrationId}" class="col-sm-3 control-label" >Registration ID</label >
-      <div class="col-sm-6" >
-        <p type="text" id="RegistrationId" class="form-control" data-th-text="${teacherDetail.RegistrationId}" >
+  </div>
+  <div class="row container-fluid">
+    <div class="colspan-4 container">
+      <div class="form-group" >
+        <label data-th-for="${RegistrationId}" class="col-sm-3 control-label" >Registration ID</label >
+        <div class="col-sm-6" >
+          <p type="text" id="RegistrationId" class="form-control" data-th-text="${teacherDetail.RegistrationId}" >
+        </div >
       </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${firstName}" class="col-sm-3 control-label" >First name</label >
-      <div class="col-sm-6" >
-        <p type="text" id="firstName" class="form-control" data-th-text="${teacherDetail.firstName}" >
+      <div class="form-group" >
+        <label data-th-for="${lastName}" class="col-sm-3 control-label" >Last name</label >
+        <div class="col-sm-6" >
+          <p type="text" id="lastName" class="form-control" data-th-text="${teacherDetail.lastName}" >
+        </div >
       </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${lastName}" class="col-sm-3 control-label" >Last name</label >
-      <div class="col-sm-6" >
-        <p type="text" id="lastName" class="form-control" data-th-text="${teacherDetail.lastName}" >
+      <div class="form-group" >
+        <label data-th-for="${dateOfBirth}" class="col-sm-3 control-label" >Date of Birth</label >
+        <div class="col-sm-6" >
+          <p type="text" id="dateOfBirth" class="form-control" data-th-text="${teacherDetail.dateOfBirth}" >
+        </div >
       </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${nic}" class="col-sm-3 control-label" >NIC</label >
-      <div class="col-sm-6" >
-        <p type="text" id="nic" class="form-control" data-th-text="${teacherDetail.nic}" >
+      <div class="form-group" >
+        <label data-th-for="${address}" class="col-sm-3 control-label" >Address</label >
+        <div class="col-sm-6" >
+          <p type="text" id="address" class="form-control" data-th-text="${teacherDetail.address}" >
+        </div >
       </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${gender}" class="col-sm-3 control-label" >Gender</label >
-      <div class="col-sm-6" >
-        <p type="text" id="gender" class="form-control" data-th-text="${teacherDetail.gender}" >
+      <div class="form-group" >
+        <label data-th-for="${mobile}" class="col-sm-3 control-label" >Mobile number</label >
+        <div class="col-sm-6" >
+          <p type="text" id="mobile" class="form-control" data-th-text="${teacherDetail.mobile}" >
+        </div >
       </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${dateOfBirth}" class="col-sm-3 control-label" >Date of Birth</label >
-      <div class="col-sm-6" >
-        <p type="text" id="dateOfBirth" class="form-control" data-th-text="${teacherDetail.dateOfBirth}" >
+      <div class="form-group" >
+        <label data-th-for="${fee}" class="col-sm-3 control-label" >Tution Fee</label >
+        <div class="col-sm-6" >
+          <p type="text" id="fee" class="form-control" data-th-text="${teacherDetail.fee}" >
+        </div >
       </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${address}" class="col-sm-3 control-label" >Address</label >
-      <div class="col-sm-6" >
-        <p type="text" id="address" class="form-control" data-th-text="${teacherDetail.address}" >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${email}" class="col-sm-3 control-label" >Email</label >
-      <div class="col-sm-6" >
-        <p type="text" id="email" class="form-control" data-th-text="${teacherDetail.email}" >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${mobile}" class="col-sm-3 control-label" >Mobile number</label >
-      <div class="col-sm-6" >
-        <p type="text" id="mobile" class="form-control" data-th-text="${teacherDetail.mobile}" >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${subject}" class="col-sm-3 control-label" >subject</label >
-      <div class="col-sm-6" >
-        <p type="text" id="subject" class="form-control" data-th-text="${teacherDetail.subject.name}" >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${fee}" class="col-sm-3 control-label" >Tution Fee</label >
-      <div class="col-sm-6" >
-        <p type="text" id="fee" class="form-control" data-th-text="${teacherDetail.fee}" >
-      </div >
-    </div >
-  </div >
-</div >
+    </div>
+  </div>
+</div>
+
+
 <div class="row container-fluid" >
   <div class="col-sm-2 col-sm-offset-2" >
     <a href="/teacher" >
@@ -113,5 +121,6 @@
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script is included-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
+
 </body >
 </html >
