--- a/src/main/resources/templates/hall/addHall.html
+++ b/src/main/resources/templates/hall/addHall.html
@@ -70,7 +70,7 @@
 
         <div class="row container-fluid">
             <div class="col-sm-2 col-sm-offset-2">
-                <button type="link" class="btn btn-danger btn-block">Back</button>
+              <a href="/hall"><button type="button" class="btn btn-danger btn-block">Back</button></a>
             </div>
 
             <div class="col-sm-2 col-sm-offset-2">
