--- a/src/main/resources/templates/hall/hall-detail.html
+++ b/src/main/resources/templates/hall/hall-detail.html
@@ -26,7 +26,7 @@
 </div>
 <!--Discount detail-->
 <div class=" row container-fluid" data-th-fragment="hallDetail">
-    <div class="col-sm-3"></div>
+    <div class="col-sm-2"></div>
     <div class="col-sm-8">
         <div class="form-group">
             <label data-th-for="${id}" class="col-sm-3 control-label">Hall ID</label>
@@ -40,7 +40,6 @@
                 <p type="text" id="number" class="form-control"   data-th-text="${hallDetail.number}">
             </div>
         </div>
-    </div>
         <div class="form-group">
             <label data-th-for="${hallCondition}" class="col-sm-3 control-label">Hall Condition</label>
             <div class="col-sm-6">
@@ -59,17 +58,17 @@
                 <p type="text" id="hallLocation" class="form-control"   data-th-text="${hallDetail.hallLocation}">
             </div>
         </div>
-
-        <div class="row container-fluid">
-            <div class="col-sm-2 col-sm-offset-2">
+    </div>
+        <div class="row container">
+            <div class="col-4">
                 <a href="/hall">
-                    <button type="link"  class="btn btn-danger btn-block" >Back</button>
+                    <button type="button"  class="btn btn-danger btn-block" >Back</button>
                 </a>
             </div>
 
         </div>
     </div>
-    <div class="col-sm-1"></div>
+    <div class="col-sm-2"></div>
 </div>
 
 <!--footer is included-->
