--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -19,9 +19,9 @@
   </a ></div >
 </div >
 
-<div class="container-fluid row" >
+<div class="container-fluid" >
   <div class="col" data-th-fragment="studentsFragment" >
-    <table class="table table-striped table-inverse table-responsive container" id="myTable" >
+    <table class="table table-striped table-inverse table-responsive container-lg" id="myTable" >
       <thead class="thead-inverse" >
       <tr >
         <th >Index</th >
