1.Student Add krddi Adala Grade ekta thyna btach ek witrak pennuwe nah...okkoma batch hama grade ektama pennuwa.batches duplicate una.
2.Reset button ek wda kle nah ( Clear All ) button ek

3.Timetable wala hall number ekt null watila thynne

4. Error validation ekn passe hall ek reset une nah

5.Batch_Student walath Student Count ekta adaalawa Student la gaana pennuwe nah

6.Payment waladi key value ekak daala search klaama inn okkoma students la view wenawa

7.duplicte data ekk wadinwa different registration number ekakta

8.Payment ekak Add krddi ek para payment times 3 plwn.amount update (-) value pennanwa.paid not paid krddi update wennah. payment ek save wennah...particular studnet knk view ekedi studnet payment shedule ek open una nmahri.

9.email confirmation system.

--- a/src/main/resources/templates/batchStudent/addBatchStudent.html
+++ b/src/main/resources/templates/batchStudent/addBatchStudent.html
@@ -20,8 +20,8 @@
         <h1>Students On batch and New Student Add</h1>
     </div>
     <div class="col-4">
-        <a href="/school">
-            <button class="btn btn-primary">Add a School</button>
+        <a href="/student">
+            <button class="btn btn-primary">Add a Student</button>
         </a>
     </div>
 </div>
