--- a/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
+++ b/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
@@ -13,7 +13,7 @@
   <div class="col-4" >
   </div >
   <div class="col-4" >
-    <h1 >Add a new teacher</h1 >
+    <h1 >Mark the attendance of Students</h1 >
   </div >
   <div class="col-4" >
     <a href="/timeTable/teacher" >
