simple issues were fixed

--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -157,7 +157,8 @@
         </div>
         <div class="row align-content-center">
             <div class="col-sm-2 col-sm-offset-2">
-                <a href="/teacher"><button type="button" class="btn btn-danger btn-block">Back</button></a>
+                <a href="/teacher">
+                    <button type="button" class="btn btn-danger btn-block">Back</button></a>
             </div>
 
             <div class="col-sm-2 col-sm-offset-2">
