--- a/src/main/resources/templates/timeTable/timeTable.html
+++ b/src/main/resources/templates/timeTable/timeTable.html
@@ -26,7 +26,7 @@
         <thead class="thead-inverse">
         <tr>
             <th>Index</th>
-            <th>code</th>
+            <th>Code</th>
             <th>Lesson</th>
             <th>Start Time</th>
             <th>End Time</th>
