--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -14,7 +14,7 @@
 
     <div class="col">
         <ul class="navbar-nav">
-            <li class="nav-item dropdown no-arrow">
+            <li class="nav-item dropdown mr-2 pr-2 ml-2 pl-2 no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     General
@@ -32,7 +32,7 @@
                     <a class="dropdown-item" href="	/user	"> User management </a>
                 </div>
             </li>
-            <li class="nav-item dropdown no-arrow">
+            <li class="nav-item dropdown mr-2 pr-2 ml-2 pl-2 no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     Transaction
@@ -48,7 +48,7 @@
 
                 </div>
             </li>
-            <li class="nav-item dropdown no-arrow">
+            <li class="nav-item dropdown mr-2 pr-2 ml-2 pl-2 no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink3" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     Report
