--- a/src/main/resources/templates/timeTable/timeTableView.html
+++ b/src/main/resources/templates/timeTable/timeTableView.html
@@ -39,7 +39,7 @@
           <th >Lesson</th >
           <th >Start Time</th >
           <th >End Time</th >
-          <th >Hall Name</th >
+          <th >Hall Number</th >
           <th >Batch Name</th >
           <th >Modify</th >
         </tr >
@@ -51,7 +51,7 @@
           <td data-th-text="${timeTable.lesson}" ></td >
           <td data-th-text="${#temporals.format(timeTable.startAt, 'dd-MM-yyyy HH:mm')}" ></td >
           <td data-th-text="${#temporals.format(timeTable.endAt, 'dd-MM-yyyy HH:mm')}" ></td >
-          <td data-th-text="${timeTable.hall.name}" ></td >
+          <td data-th-text="${timeTable.hall.number}" ></td >
           <td data-th-text="${timeTable.batch.name}" ></td >
           <td >
             <a data-th-href="${'/timeTable/view/'+ timeTable.id}" >
