--- a/src/main/resources/templates/timeTable/addTimeTable.html
+++ b/src/main/resources/templates/timeTable/addTimeTable.html
@@ -154,7 +154,7 @@
                             swal({
                                 title: "Could you accept those days.. !",
                                 icon: "warning",
-                                text: "Please check your date \n Expire Date can not be less than Manufacture Date",
+                                text: "Please check your date \n start at can not be less than end at",
                             })
                             $(`#sAt${selectedFiledId}`).addClass('bg-danger').removeClass('bg-success bg-white');
                             $(`#eAt${selectedFiledId}`).val('').addClass('bg-danger').removeClass('bg-success bg-white');
