add student issue was fixed

--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -276,7 +276,8 @@
             type: 'GET',
             url: url,
             success: function (resp) {
-                $("#batches").empty();
+                $("#batches").empty().append(new Option("Please Select", ""));;
+
                 for (let i = 0; i < resp.length; i++) {
                     $("#batches").append(new Option(resp[i].name, resp[i].id));
                 }
