--- a/src/main/resources/templates/timeTable/addTimeTable.html
+++ b/src/main/resources/templates/timeTable/addTimeTable.html
@@ -207,6 +207,12 @@
         }
     });
 
+    /*
+         $('[type="date"]').prop('max', function () {
+            return new Date().toJSON().split('T')[0];
+        });
+
+     */
 </script >
 </body >
 </html >
